# cs-exercise-generator

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/cs_gen/: apps.py  choices.py  serializers.py  urls.py  views.py
apps/cs_gen/services/: exceptions.py  exercise_factory.py
apps/cs_gen/services/exercise_generators/: base_generator.py  encoding_task.py  info_tasks.py  path_task.py
apps/cs_gen/services/tasks/: base_task.py  encoding_tasks.py  info_tasks.py  path_tasks.py
apps/cs_gen/services/tasks/builders/: base_builder.py  encoding_builder.py  info_builder.py  path_builder.py  phrases.json  samples.json  samples.py
apps/users/: admin.py  forms.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py
backend/: settings.py  urls.py
backend/templates/: swagger-ui.html
